--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
@@ -1,33 +1,35 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <div class="ui large ordered steps">
+    <div class="ui large ordered steps" style="width: 280px;">
       <div class="active step">
         <div class="content">
-          <div class="title">ตรวจสอบดุลบัญชี</div>
-          <div class="description">"ยอดยกไป"</div>
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ดุลบัญชียอดยกไป</div>
+        </div>
+      </div>
+      <div class="step" style="width: 260px;">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ข้อมูลบัญชี</div>
         </div>
       </div>
       <div class="step">
         <div class="content">
-          <div class="title">ตรวจสอบความสัมพันธ์</div>
-          <div class="description">"เดบิต" "เครดิต"</div>
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท
+          </div>
         </div>
       </div>
       <div class="step">
         <div class="content">
-          <div class="title">ตรวจสอบเปรียบเทียบ</div>
-          <div class="description">"เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</div>
-        </div>
-      </div>
-      <div class="step">
-        <div class="content">
-          <div class="title">ตรวจสอบเปรียบเทียบบัญชี</div>
-          <div class="description">เคลื่อนไหวเงินฝากคลังกระทบยอด 3 บัญชี</div>
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง
+          </div>
         </div>
       </div>
     </div>
 
-    <h2 class="ui header">ตรวจสอบดุลบัญชีที่แสดงในช่อง "ยอดยกไป" ของงบทดลอง</h2>
+     <h2 class="ui header">ตรวจสอบดุลบัญชีที่แสดงในช่อง "ยอดยกไป" ของงบทดลอง</h2>
 
     <div class="ui top attached header">
       <span>ตรวจสอบดุลบัญชี "ยอดยกไป"</span>
@@ -50,14 +52,15 @@
               <i class="dropdown icon"></i>
               <div class="menu">
                 <div class="item">
-                  <i class="edit icon"></i>PDF</div>
+                  <i class="file pdf outline icon"></i> PDF</div>
                 <div class="item">
-                  <i class="delete icon"></i>Excel</div>
+                  <i class="file excel outline icon"></i>Excel</div>
               </div>
             </div>
           </div>
         </div>
       </div>
+   
 
       <table class="ui small celled table">
         <thead>
