--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.html
@@ -1,32 +1,34 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-    <div class="ui large ordered steps">
-      <div class="completed step">
-        <div class="content">
-          <div class="title">ตรวจสอบดุลบัญชี</div>
-          <div class="description">"ยอดยกไป"</div>
+    <div class="sixteen wide column">
+      <div class="ui large ordered steps"  style="width: 280px;"> 
+        <div class="step">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">ดุลบัญชียอดยกไป</div>
+          </div>
+        </div>
+        <div class="active  step" style="width: 260px;">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">ข้อมูลบัญชี</div>
+          </div>
+        </div>
+        <div class="step">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท			
+              </div>
+          </div>
+        </div>
+        <div class="step">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง			
+              </div>
+          </div>
         </div>
       </div>
-      <div class="active step">
-        <div class="content">
-          <div class="title">ตรวจสอบความสัมพันธ์</div>
-          <div class="description">"เดบิต" "เครดิต"</div>
-        </div>
-      </div>
-      <div class="step">
-        <div class="content">
-          <div class="title">ตรวจสอบเปรียบเทียบ</div>
-          <div class="description">"เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</div>
-        </div>
-      </div>
-      <div class="step">
-        <div class="content">
-          <div class="title">ตรวจสอบเปรียบเทียบบัญชี</div>
-          <div class="description">เคลื่อนไหวเงินฝากคลังกระทบยอด 3 บัญชี</div>
-        </div>
-      </div>
-    </div>
-
+  
     <h2 class="ui header">ตรวจสอบความสัมพันธ์ของช่อง "เดบิต" "เครดิต" ในงบทดลอง</h2>
 
     <div class="ui top attached header">
@@ -49,11 +51,11 @@
             <div class="ui floating dropdown icon button">
               <i class="dropdown icon"></i>
               <div class="menu">
-                <div class="item">
-                  <i class="edit icon"></i>PDF</div>
-                <div class="item">
-                  <i class="delete icon"></i>Excel</div>
-              </div>
+                  <div class="item">
+                      <i class="file pdf outline icon"></i> PDF</div>
+                  <div class="item">
+                      <i class="file excel outline icon"></i>Excel</div>
+                </div>
             </div>
           </div>
         </div>
