--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-4/int07-5-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-4/int07-5-4.component.html
@@ -1,64 +1,64 @@
 <div class="ui grid">
-  <div class="sixteen wide column">
-    <div class="ui large ordered steps">
-      <div class="completed step">
-        <div class="content">
-          <div class="title">ตรวจสอบดุลบัญชี</div>
-          <div class="description">"ยอดยกไป"</div>
+    <div class="sixteen wide column">
+      <div class="ui large ordered steps"  style="width: 280px;"> 
+        <div class="step">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">ดุลบัญชียอดยกไป</div>
+          </div>
+        </div>
+        <div class="step" style="width: 260px;">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">ข้อมูลบัญชี</div>
+          </div>
+        </div>
+        <div class="  step">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท			
+              </div>
+          </div>
+        </div>
+        <div class="active step">
+          <div class="content">
+            <div class="title">ตรวจสอบ</div>
+            <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง			
+              </div>
+          </div>
         </div>
       </div>
-      <div class="completed step">
-        <div class="content">
-          <div class="title">ตรวจสอบความสัมพันธ์</div>
-          <div class="description">"เดบิต" "เครดิต"</div>
-        </div>
-      </div>
-      <div class="active step">
-        <div class="content">
-          <div class="title">ตรวจสอบเปรียบเทียบ</div>
-          <div class="description">"เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</div>
-        </div>
-      </div>
-      <div class="step">
-        <div class="content">
-          <div class="title">ตรวจสอบเปรียบเทียบบัญชี</div>
-          <div class="description">เคลื่อนไหวเงินฝากคลังกระทบยอด 3 บัญชี</div>
-        </div>
-      </div>
-    </div>
 
     <h2 class="ui header">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง </h2>
 
 
-    <div class="ui top attached header">
-      <span>ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</span>
+    <div class="ui tabular menu ">
+      <a class="item  " routerLink="/int07-5-1">
+        10512 บัญชีเงินฝากคลัง
+      </a>
+
+      <a class="item " routerLink="/int07-5-2">
+        10778 บัญชีเจ้าหนี้ อปท.
+      </a>
+      <a class="item " routerLink="/int07-5-3">
+        10910 บัญชีเงินประกันอื่น
+      </a>
+      <a class="item  active" routerLink="/int07-5-4">
+        10658 บัญชีเงินสินบนและเงินรางวัล
+      </a>
+     
+
     </div>
-    <div class="ui   six item menu">
-      <a _ngcontent-c0="" class="item" routerlinkactive="active" ng-reflect-router-link="/int07-5-1" ng-reflect-router-link-active="active"
-        href="#/int07-5-1">10512 บัญชีเงินฝากคลัง
-      </a>
-      <a _ngcontent-c0="" class="item" routerlinkactive="active" ng-reflect-router-link="/int07-5-2" ng-reflect-router-link-active="active"
-        href="#/int07-5-2">10778 บัญชีเจ้าหนี้ อปท.
-      </a>
-      <a _ngcontent-c0="" class="item" routerlinkactive="active" ng-reflect-router-link="/int07-5-3" ng-reflect-router-link-active="active"
-        href="#/int07-5-3">10910 บัญชีเงินประกันอื่น
-
-      </a>
-      <a _ngcontent-c0="" class="item" routerlinkactive="active" ng-reflect-router-link="/int07-5-4" ng-reflect-router-link-active="active"
-        href="#/int07-5-4">10658 บัญชีเงินสินบนและเงินรางวัล
-
-      </a>
-      <a _ngcontent-c0="" class="item" routerlinkactive="active" ng-reflect-router-link="/int07-6" ng-reflect-router-link-active="active"
-        href="#/int07-6">ส่งเงินบัญชีเจ้าหนี้ อปท.
-
-      </a>
-      <a _ngcontent-c0="" class="item" routerlinkactive="active" ng-reflect-router-link="/int07-7" ng-reflect-router-link-active="active"
-        href="#/int07-7">เคลื่อนไหวเงินฝากคลัง
-      </a>
-    </div>
+   
     <div class="ui attached segment">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
+            <button class="ui mini primary button" routerLink="/int07-6">
+              10910 บัญชีเงินประกันอื่น
+            </button>
+            <button class="ui mini primary button" routerLink="/int07-7">
+              10658 บัญชีเงินสินบนและเงินรางวัล
+            </button>
           <button class="ui mini primary button">
             <i class="print icon"></i>
             พิมพ์
@@ -72,11 +72,11 @@
             <div class="ui floating dropdown icon button">
               <i class="dropdown icon"></i>
               <div class="menu">
-                <div class="item">
-                  <i class="edit icon"></i>PDF</div>
-                <div class="item">
-                  <i class="delete icon"></i>Excel</div>
-              </div>
+                  <div class="item">
+                      <i class="file pdf outline icon"></i> PDF</div>
+                  <div class="item">
+                      <i class="file excel outline icon"></i>Excel</div>
+                </div>
             </div>
           </div>
         </div>
@@ -105,9 +105,9 @@
         <div class="seven wide column left aligned">
           <label class="custom-label-w-25">
             ยอดคงเหลือบัญชีเงินสินบนและเงินรางวัลตามงบทดลองในระบบ GFMIS
-            <br> ยอดคงเหลือเงินฝากคลัง 10658 ตามรายงานเคลื่อนไหวเงินฝากคลัง (ZGL_RPT013)    
-            <br>       
-          </label> 
+            <br> ยอดคงเหลือเงินฝากคลัง 10658 ตามรายงานเคลื่อนไหวเงินฝากคลัง (ZGL_RPT013)
+            <br>
+          </label>
         </div>
         <div class="three wide column right aligned">
           <label class="custom-label-w-25">
@@ -136,7 +136,7 @@
         <div class="seven wide column left aligned">
           <label class="custom-label-w-25">
             ยอดคงเหลือตามรายงานเคลื่อนไหวเงินฝากคลัง รหัส 10658
-            <br>ยอดคงเหลือเงินสินบนและเงินรางวัลในทะเบียนคุม 
+            <br>ยอดคงเหลือเงินสินบนและเงินรางวัลในทะเบียนคุม
             <br>
           </label>
         </div>
