--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/tax-audit-reporting.component.html
@@ -81,7 +81,19 @@
     <app-ts01-10 *ngIf="sent && selectedTop == 'ตส. 01-10'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-10>
 
+    <app-ts01-10-1
+        *ngIf="sent && selectedTop == 'ตส. 01-10/1'"
+        (discard)="onDiscard($event)"
+        class="sixteen wide column segments">
+    </app-ts01-10-1>
+
+    <app-ts01-11
+        *ngIf="sent && selectedTop == 'ตส. 01-11'"
+        (discard)="onDiscard($event)"
+        class="sixteen wide column segments">
+    </app-ts01-11>
+
     <app-ts01-13 *ngIf="sent && selectedTop == 'ตส. 01-13'" (discard)="onDiscard($event)" class="sixteen wide column segments">
     </app-ts01-13>
-
+  
 </form>
